<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor=" #FFFF66 "
        app:cardCornerRadius="@dimen/place_autocomplete_prediction_primary_text">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/upContactHead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background=" #FF0033 "
                android:gravity="center"
                android:text="@string/upContactHead"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/upName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/upName"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/upLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/upLastName"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/upTel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/upTel"
                android:inputType="number|phone" />

            <EditText
                android:id="@+id/upMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/upMail"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <ImageButton
                    android:id="@+id/btnUpdateContact"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/btnUpdateContact"
                    app:srcCompat="@drawable/ok1x48" />

                <ImageButton
                    android:id="@+id/btnOutUpdateContact"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/btnOutUpdateContact"
                    app:srcCompat="@drawable/delete1x48" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</ScrollView>