<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="#d9b3ff"
        app:cardCornerRadius="@dimen/place_autocomplete_progress_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tituloUpdateEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#5cd65c"
                android:gravity="center"
                android:text="@string/tituloUpdateEvent"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editHeadEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editHeadEvent"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editDateEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editDateEvent"
                android:inputType="date" />

            <EditText
                android:id="@+id/editTimeEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editTimeEvent"
                android:inputType="time" />

            <EditText
                android:id="@+id/editDescEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editDescEvent"
                android:inputType="textMultiLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <ImageButton
                    android:id="@+id/imageOkEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/imageOkEvent"
                    app:srcCompat="@drawable/ok1x48" />

                <ImageButton
                    android:id="@+id/imageOutEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/imageOutEvent"
                    app:srcCompat="@drawable/delete1x48" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</ScrollView>