<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/black"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor=" #66ff66"
        app:cardCornerRadius="@dimen/place_autocomplete_powered_by_google_height">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/nombreContacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nombreContacto"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/apellidoContacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/apellidoContacto"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/telContacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/telContacto"
                android:inputType="phone" />

            <EditText
                android:id="@+id/mailContacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/mailContacto"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/btnAddContact"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/roundedbtn1"
                android:backgroundTint="@android:color/holo_blue_light"
                android:text="@string/btnAddContact"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/btnOutContact"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/roundedbtn1"
                android:backgroundTint="#944dff"
                android:text="@string/btnExitUpdate"
                android:textColor="@android:color/background_light" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>